--- a/Azeroth.WF/Azeroth.STSM/LeaveFlow.xaml
+++ b/Azeroth.WF/Azeroth.STSM/LeaveFlow.xaml
@@ -1,4 +1,4 @@
-﻿<Activity mc:Ignorable="sads sap" x:Class="Azeroth.STSM.LeaveFlow" sap:VirtualizedContainerService.HintSize="1251,1031" mva:VisualBasic.Settings="Assembly references and imported namespaces for internal implementation"
+﻿<Activity mc:Ignorable="sads sap" x:Class="Azeroth.STSM.LeaveFlow"
  xmlns="http://schemas.microsoft.com/netfx/2009/xaml/activities"
  xmlns:av="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
  xmlns:local="clr-namespace:Azeroth.STSM"
@@ -9,7 +9,6 @@
  xmlns:s1="clr-namespace:System;assembly=System"
  xmlns:s2="clr-namespace:System;assembly=System.Xml"
  xmlns:s3="clr-namespace:System;assembly=System.Core"
- xmlns:s4="clr-namespace:System;assembly=System.ServiceModel"
  xmlns:sa="clr-namespace:System.Activities;assembly=System.Activities"
  xmlns:sad="clr-namespace:System.Activities.Debugger;assembly=System.Activities"
  xmlns:sads="http://schemas.microsoft.com/netfx/2010/xaml/activities/debugger"
@@ -22,177 +21,56 @@
  xmlns:sl="clr-namespace:System.Linq;assembly=System.Core"
  xmlns:st="clr-namespace:System.Text;assembly=mscorlib"
  xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
-  <sap:WorkflowViewStateService.ViewState>
-    <scg3:Dictionary x:TypeArguments="x:String, x:Object">
-      <x:Boolean x:Key="ShouldCollapseAll">True</x:Boolean>
-    </scg3:Dictionary>
-  </sap:WorkflowViewStateService.ViewState>
-  <Flowchart DisplayName="请假流程" sad:XamlDebuggerXmlReader.FileName="D:\VisualStudioSolution\Azeroth.WF\Azeroth.WF\Azeroth.STSM\LeaveFlow.xaml" sap:VirtualizedContainerService.HintSize="900,636">
-    <Flowchart.Variables>
-      <Variable x:TypeArguments="x:Int32" Default="4" Name="hours" />
-      <Variable x:TypeArguments="x:String" Default="短假期" Name="leaveType" />
-    </Flowchart.Variables>
+  <x:Members>
+    <x:Property Name="flowInfo" Type="InOutArgument(local:FlowInfo)" />
+  </x:Members>
+  <sap:VirtualizedContainerService.HintSize>654,716</sap:VirtualizedContainerService.HintSize>
+  <mva:VisualBasic.Settings>Assembly references and imported namespaces for internal implementation</mva:VisualBasic.Settings>
+  <Flowchart sad:XamlDebuggerXmlReader.FileName="D:\VisualStudioSolution\Azeroth.WF\Azeroth.WF\Azeroth.STSM\LeaveFlow.xaml" sap:VirtualizedContainerService.HintSize="614,636">
     <sap:WorkflowViewStateService.ViewState>
       <scg3:Dictionary x:TypeArguments="x:String, x:Object">
         <x:Boolean x:Key="IsExpanded">False</x:Boolean>
-        <av:Point x:Key="ShapeLocation">370,32.5</av:Point>
+        <av:Point x:Key="ShapeLocation">270,2.5</av:Point>
         <av:Size x:Key="ShapeSize">60,75</av:Size>
-        <x:Double x:Key="Width">886</x:Double>
-        <av:PointCollection x:Key="ConnectorLocation">400,107.5 400,166.5</av:PointCollection>
+        <av:PointCollection x:Key="ConnectorLocation">300,77.5 300,140</av:PointCollection>
       </scg3:Dictionary>
     </sap:WorkflowViewStateService.ViewState>
     <Flowchart.StartNode>
-      <x:Reference>__ReferenceID8</x:Reference>
+      <x:Reference>__ReferenceID1</x:Reference>
     </Flowchart.StartNode>
-    <FlowStep x:Name="__ReferenceID5">
+    <FlowStep x:Name="__ReferenceID1">
       <sap:WorkflowViewStateService.ViewState>
         <scg3:Dictionary x:TypeArguments="x:String, x:Object">
-          <av:Point x:Key="ShapeLocation">620,329</av:Point>
+          <av:Point x:Key="ShapeLocation">200,140</av:Point>
           <av:Size x:Key="ShapeSize">200,22</av:Size>
-          <av:PointCollection x:Key="ConnectorLocation">720,351 720,389</av:PointCollection>
+          <av:PointCollection x:Key="ConnectorLocation">300,162 300,280</av:PointCollection>
         </scg3:Dictionary>
       </sap:WorkflowViewStateService.ViewState>
-      <local:Approve Text="{x:Null}" DisplayName="上级审批" sap:VirtualizedContainerService.HintSize="200,22">
+      <local:FlowHandler Approver="[Azeroth.STSM.Role.上级]" BookmarkName="上级审批" DisplayName="上级审批" FlowInfo="[flowInfo]" sap:VirtualizedContainerService.HintSize="200,22">
         <sap:WorkflowViewStateService.ViewState>
           <scg3:Dictionary x:TypeArguments="x:String, x:Object">
             <x:Boolean x:Key="IsExpanded">True</x:Boolean>
           </scg3:Dictionary>
         </sap:WorkflowViewStateService.ViewState>
-      </local:Approve>
-      <FlowStep.Next>
-        <FlowStep x:Name="__ReferenceID1">
-          <sap:WorkflowViewStateService.ViewState>
-            <scg3:Dictionary x:TypeArguments="x:String, x:Object">
-              <av:Point x:Key="ShapeLocation">620,389</av:Point>
-              <av:Size x:Key="ShapeSize">200,22</av:Size>
-              <av:PointCollection x:Key="ConnectorLocation">720,411 720,449</av:PointCollection>
-            </scg3:Dictionary>
-          </sap:WorkflowViewStateService.ViewState>
-          <local:Approve Text="{x:Null}" DisplayName="经理审批" sap:VirtualizedContainerService.HintSize="200,22">
-            <sap:WorkflowViewStateService.ViewState>
-              <scg3:Dictionary x:TypeArguments="x:String, x:Object">
-                <x:Boolean x:Key="IsExpanded">True</x:Boolean>
-              </scg3:Dictionary>
-            </sap:WorkflowViewStateService.ViewState>
-          </local:Approve>
-          <FlowStep.Next>
-            <FlowStep x:Name="__ReferenceID2">
-              <sap:WorkflowViewStateService.ViewState>
-                <scg3:Dictionary x:TypeArguments="x:String, x:Object">
-                  <av:Point x:Key="ShapeLocation">620,449</av:Point>
-                  <av:Size x:Key="ShapeSize">200,22</av:Size>
-                </scg3:Dictionary>
-              </sap:WorkflowViewStateService.ViewState>
-              <local:Approve Text="{x:Null}" DisplayName="HR审批" sap:VirtualizedContainerService.HintSize="200,22">
-                <sap:WorkflowViewStateService.ViewState>
-                  <scg3:Dictionary x:TypeArguments="x:String, x:Object">
-                    <x:Boolean x:Key="IsExpanded">True</x:Boolean>
-                  </scg3:Dictionary>
-                </sap:WorkflowViewStateService.ViewState>
-              </local:Approve>
-            </FlowStep>
-          </FlowStep.Next>
-        </FlowStep>
-      </FlowStep.Next>
-    </FlowStep>
-    <FlowStep x:Name="__ReferenceID3">
-      <sap:WorkflowViewStateService.ViewState>
-        <scg3:Dictionary x:TypeArguments="x:String, x:Object">
-          <av:Point x:Key="ShapeLocation">50,239</av:Point>
-          <av:Size x:Key="ShapeSize">200,22</av:Size>
-          <av:PointCollection x:Key="ConnectorLocation">150,261 150,309</av:PointCollection>
-        </scg3:Dictionary>
-      </sap:WorkflowViewStateService.ViewState>
-      <local:Approve Text="{x:Null}" DisplayName="上级审批" sap:VirtualizedContainerService.HintSize="200,22">
-        <sap:WorkflowViewStateService.ViewState>
-          <scg3:Dictionary x:TypeArguments="x:String, x:Object">
-            <x:Boolean x:Key="IsExpanded">True</x:Boolean>
-          </scg3:Dictionary>
-        </sap:WorkflowViewStateService.ViewState>
-      </local:Approve>
+      </local:FlowHandler>
       <FlowStep.Next>
         <FlowStep x:Name="__ReferenceID0">
           <sap:WorkflowViewStateService.ViewState>
             <scg3:Dictionary x:TypeArguments="x:String, x:Object">
-              <av:Point x:Key="ShapeLocation">50,309</av:Point>
+              <av:Point x:Key="ShapeLocation">200,280</av:Point>
               <av:Size x:Key="ShapeSize">200,22</av:Size>
             </scg3:Dictionary>
           </sap:WorkflowViewStateService.ViewState>
-          <local:Approve Text="{x:Null}" DisplayName="HR审批" sap:VirtualizedContainerService.HintSize="200,22">
+          <local:FlowHandler Approver="[Azeroth.STSM.Role.HR]" BookmarkName="HR审批" DisplayName="HR审批" FlowInfo="[flowInfo]" sap:VirtualizedContainerService.HintSize="200,22">
             <sap:WorkflowViewStateService.ViewState>
               <scg3:Dictionary x:TypeArguments="x:String, x:Object">
                 <x:Boolean x:Key="IsExpanded">True</x:Boolean>
               </scg3:Dictionary>
             </sap:WorkflowViewStateService.ViewState>
-          </local:Approve>
-        </FlowStep>
-      </FlowStep.Next>
-    </FlowStep>
-    <FlowStep x:Name="__ReferenceID4">
-      <sap:WorkflowViewStateService.ViewState>
-        <scg3:Dictionary x:TypeArguments="x:String, x:Object">
-          <av:Point x:Key="ShapeLocation">280,329</av:Point>
-          <av:Size x:Key="ShapeSize">200,22</av:Size>
-          <av:PointCollection x:Key="ConnectorLocation">380,351 380,399</av:PointCollection>
-        </scg3:Dictionary>
-      </sap:WorkflowViewStateService.ViewState>
-      <local:Approve Text="{x:Null}" DisplayName="上级审批" sap:VirtualizedContainerService.HintSize="200,22">
-        <sap:WorkflowViewStateService.ViewState>
-          <scg3:Dictionary x:TypeArguments="x:String, x:Object">
-            <x:Boolean x:Key="IsExpanded">True</x:Boolean>
-          </scg3:Dictionary>
-        </sap:WorkflowViewStateService.ViewState>
-      </local:Approve>
-      <FlowStep.Next>
-        <FlowStep x:Name="__ReferenceID7">
-          <sap:WorkflowViewStateService.ViewState>
-            <scg3:Dictionary x:TypeArguments="x:String, x:Object">
-              <av:Point x:Key="ShapeLocation">280,399</av:Point>
-              <av:Size x:Key="ShapeSize">200,22</av:Size>
-            </scg3:Dictionary>
-          </sap:WorkflowViewStateService.ViewState>
-          <local:Approve Text="{x:Null}" DisplayName="HR审批" sap:VirtualizedContainerService.HintSize="200,22">
-            <sap:WorkflowViewStateService.ViewState>
-              <scg3:Dictionary x:TypeArguments="x:String, x:Object">
-                <x:Boolean x:Key="IsExpanded">True</x:Boolean>
-              </scg3:Dictionary>
-            </sap:WorkflowViewStateService.ViewState>
-          </local:Approve>
+          </local:FlowHandler>
         </FlowStep>
       </FlowStep.Next>
     </FlowStep>
     <x:Reference>__ReferenceID0</x:Reference>
-    <x:Reference>__ReferenceID1</x:Reference>
-    <x:Reference>__ReferenceID2</x:Reference>
-    <FlowDecision x:Name="__ReferenceID8" Condition="[hours &lt;= 8]" sap:VirtualizedContainerService.HintSize="70,87" True="{x:Reference __ReferenceID3}">
-      <sap:WorkflowViewStateService.ViewState>
-        <scg3:Dictionary x:TypeArguments="x:String, x:Object">
-          <x:Boolean x:Key="IsExpanded">True</x:Boolean>
-          <av:Point x:Key="ShapeLocation">365,166.5</av:Point>
-          <av:Size x:Key="ShapeSize">70,87</av:Size>
-          <x:String x:Key="TrueLabel">8小时内</x:String>
-          <x:String x:Key="FalseLabel">超过8小时</x:String>
-          <av:PointCollection x:Key="TrueConnector">365,210 150,210 150,239</av:PointCollection>
-          <av:PointCollection x:Key="FalseConnector">435,210 550,210 550,256.5</av:PointCollection>
-        </scg3:Dictionary>
-      </sap:WorkflowViewStateService.ViewState>
-      <FlowDecision.False>
-        <FlowDecision x:Name="__ReferenceID6" Condition="[hours &lt;= 24]" sap:VirtualizedContainerService.HintSize="70,87" True="{x:Reference __ReferenceID4}" False="{x:Reference __ReferenceID5}">
-          <sap:WorkflowViewStateService.ViewState>
-            <scg3:Dictionary x:TypeArguments="x:String, x:Object">
-              <x:Boolean x:Key="IsExpanded">True</x:Boolean>
-              <av:Point x:Key="ShapeLocation">515,256.5</av:Point>
-              <av:Size x:Key="ShapeSize">70,87</av:Size>
-              <x:String x:Key="TrueLabel">24小时内</x:String>
-              <x:String x:Key="FalseLabel">超过24小时</x:String>
-              <av:PointCollection x:Key="TrueConnector">515,300 380,300 380,329</av:PointCollection>
-              <av:PointCollection x:Key="FalseConnector">585,300 720,300 720,329</av:PointCollection>
-            </scg3:Dictionary>
-          </sap:WorkflowViewStateService.ViewState>
-        </FlowDecision>
-      </FlowDecision.False>
-    </FlowDecision>
-    <x:Reference>__ReferenceID6</x:Reference>
-    <x:Reference>__ReferenceID7</x:Reference>
   </Flowchart>
 </Activity>
